--- a/public/main.css
+++ b/public/main.css
@@ -81,6 +81,7 @@ a {
   border-radius: 4px;
   border: 3px solid white;
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
+  max-height: 500px;
 }
 
 /*Experiences*/
