--- a/public/main.css
+++ b/public/main.css
@@ -78,7 +78,7 @@ a {
   display: flex;
   gap: 30px;
   align-items: center;
-  margin-top: 120px
+  margin-top: 120px;
 }
 .destination-details img {
   border-radius: 4px;
@@ -165,28 +165,27 @@ a {
   margin-bottom: 15px;
 }
 /* Form */
-.form{
-  display:flex;
+.form {
+  display: flex;
   flex-direction: column;
-  max-width:400px;
+  max-width: 400px;
   margin: 0 auto;
 }
 
-.input{
+.input {
   border: 1px solid gray;
   padding: 10px;
-  margin-bottom:20px;
-  border-radius:5px;
+  margin-bottom: 20px;
+  border-radius: 5px;
 }
 
-.btn{
-  background-color:#2c3e50;
+.btn {
+  background-color: #2c3e50;
   color: white;
   padding: 10px;
   border-radius: 5px;
-  border:none;
+  border: none;
 }
-
 
 .sticky-button {
   position: fixed;
@@ -204,10 +203,10 @@ a {
   margin-top: -70px;
 }
 
-.col-md-4{
+.col-md-4 {
   width: 220px;
 }
-.me-3{
+.me-3 {
   background-color: green;
 }
 .me-3:hover {
