--- a/public/main.css
+++ b/public/main.css
@@ -110,9 +110,8 @@ a {
   text-align: center;
 }
 .experiences img {
-  width: 250px;
-  height: 150px;
-  object-fit: cover;
+  height: 250px;
+  /*object-fit: cover;*/
   display: block;
 }
 .experiences .card .card__text {
