--- a/public/main.css
+++ b/public/main.css
@@ -20,20 +20,25 @@ a:visited {
   color: #2c3e50;
 }
 .container {
-  margin: 0 auto;
+  margin-top: 100px;
+  /*margin: 0 auto;*/
   max-width: 960px;
 }
 
 /* Home */
 .home img {
-  max-height: 230px;
-  /*max-width: 230px;*/
+  max-width: 200px;
+  border-radius: 4px;
+  border: 3px solid white;
+  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
+  max-height: 500px;
 }
 .home .destinations {
   display: flex;
-  margin-top: 180px;
+  margin-top: 30px;
   justify-content: space-between;
   font-size: 15px;
+  padding-top: 40px:
 }
 
 /* Navigation */
@@ -50,6 +55,7 @@ a:visited {
   align-items: center;
   border-bottom: 5px solid #4e6c71;
   z-index: 2;
+  margin-bottom: 20px;
 }
 #nav a {
   display: inline-block;
@@ -78,7 +84,7 @@ a {
   display: flex;
   gap: 30px;
   align-items: center;
-  margin-top: 120px;
+  margin-top: 30px;
 }
 .destination-details img {
   border-radius: 4px;
@@ -215,4 +221,11 @@ a {
 
  {
   background-color: green;
+}
+
+.hHome {
+  padding-top: 30px;
+}
+.hJerk {
+  padding-top: 30px;
 }
