--- a/public/main.css
+++ b/public/main.css
@@ -38,7 +38,7 @@ a:visited {
   margin-top: 30px;
   justify-content: space-between;
   font-size: 15px;
-  padding-top: 40px:
+  padding-top: 40px;
 }
 
 /* Navigation */
@@ -228,4 +228,7 @@ a {
 }
 .hJerk {
   padding-top: 30px;
+}
+.h-jerk-single {
+  /*color: transparent;*/
 }
