--- a/public/main.css
+++ b/public/main.css
@@ -28,10 +28,10 @@ a:visited {
 /* Home */
 .home img {
   max-width: 200px;
+  max-height: 200px;
   border-radius: 4px;
   border: 3px solid white;
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
-  max-height: 500px;
 }
 .home .destinations {
   display: flex;
@@ -39,6 +39,7 @@ a:visited {
   justify-content: space-between;
   font-size: 15px;
   padding-top: 40px;
+  flex-wrap: wrap;
 }
 
 .about {
@@ -225,10 +226,6 @@ a {
 .me-3:hover {
   background-color: green;
   border-color: green;
-}
-
- {
-  background-color: green;
 }
 
 .h-Home {
